# City-Simulator

./: .cproject  .gitignore  .project  CMakeLists.txt  OperationContract.md  README.md  Specificaties.html  result.txt  simpleTown.xml  stad.xml
CITY_PROPER_VERSION/: 0_SIMULATOR.cpp  Building.h  City.cpp  City.h  CityParser.cpp  FireDepot.cpp  FireDepot.h  FireDepot_test.cpp  FireTruck.cpp  FireTruck_test.cpp  House.cpp  House.h  Point.cpp  Point.h  Simulator.cpp  Simulator.h  Size.cpp  Size.h  Vehicle.cpp
City/: 0_SIMULATOR.cpp  Ambulance.cpp  Ambulance.h  Ambulance_test.cpp  Building.cpp  Building.h  Building_test.cpp  Check.cpp  Check.h  Check_test.cpp  City.cpp  City.h  CityParser.cpp  CityParser.h  CityParser_Test.cpp  CityParser_test.cpp  CityX.cpp  Depot.cpp  Depot.h  Depot_test.cpp  EmergencyCar.cpp  EmergencyCar.h  EmergencyCar_test.cpp  FileTest.cpp  FileTest.h  FileTest_test.cpp  Fire.cpp  Fire.h  FireDepot.cpp  FireDepot.h  FireDepot_test.cpp  FireTruck.cpp  FireTruck.h  FireTruck_test.cpp  Fire_test.cpp  GUI.cpp  GUI.h  Hospital.cpp  Hospital.h  Hospital_test.cpp  (+41 more)
Contract/: Buidling.md  Building.md  City.md  Control.md  Fire Depot.md  Fire Truck.md  House.md  Parser.md  Point.md  Size.md  Street.md  Vehicle.md  readme.md
FINAL_VERSION_1-0/: 0_SIMULATOR.cpp  Building.cpp  Building.h  City.cpp  City.h  CityParser.cpp  FireDepot.cpp  FireDepot.h  FireDepot_test.cpp  FireTruck.cpp  FireTruck_test.cpp  House.cpp  House_test.cpp  Output.h  Point.h  Simulator.cpp  Simulator.h  Size.h  Street.cpp  Street.h  Vehicle.cpp  Vehicle.h  Vehicle_test.cpp  WorldMap.cpp  (+3 more)
(+63 files in other folders)
